[gd_scene load_steps=17 format=2]

[ext_resource path="res://fonts/Kenney Pixel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://animations/title.start.tres" type="Animation" id=3]
[ext_resource path="res://scenes/Border.tscn" type="PackedScene" id=4]
[ext_resource path="res://Tilesheet.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 110
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.368627, 0.239216, 0.313726, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.811765, 0.776471, 0.721569, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0431373, 0.0431373, 0.0431373, 0.27451 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.25098, 0.164706, 0.215686, 1 )

[sub_resource type="DynamicFont" id=8]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=11]
size = 29
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border" parent="." instance=ExtResource( 4 )]

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -169.0
margin_top = 70.0
margin_right = 169.0
margin_bottom = 153.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.811765, 0.776471, 0.721569, 1 )
text = "NAMELESS"
align = 1
valign = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Subtitle" type="Label" parent="Title"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -169.0
margin_top = 28.5
margin_right = 169.0
margin_bottom = 81.5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.811765, 0.776471, 0.721569, 1 )
text = "CAVERNS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Title"]
autoplay = "title.start"
anims/title.start = ExtResource( 3 )

[node name="Play" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -26.0
margin_right = 50.0
margin_bottom = 26.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.811765, 0.776471, 0.721569, 1 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 30.0
margin_right = 50.0
margin_bottom = 52.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.811765, 0.776471, 0.721569, 1 )
text = "CREDITS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 56.0
margin_right = 50.0
margin_bottom = 78.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.811765, 0.776471, 0.721569, 1 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -946.0
margin_bottom = -522.0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 10 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Fullscreen"]
position = Vector2( 13.011, 13 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
vframes = 22
hframes = 48
frame = 814

[node name="Audio" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 90.0
margin_right = -946.0
margin_bottom = -482.0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 10 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Audio"]
position = Vector2( 13.011, 13 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
vframes = 22
hframes = 48
frame = 806

[node name="Copyright" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = -0.000244141
margin_bottom = -17.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.811765, 0.776471, 0.721569, 1 )
text = "(c) Disapproval 2021"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="Audio" to="." method="_on_Audio_pressed"]
